--- a/projects/arduino/arduino-setup.html
+++ b/projects/arduino/arduino-setup.html
@@ -3,7 +3,9 @@ layout: default
 title: Arduino Setup
 ---
 
-<h1>{{ page.title }}</h1>
+<div class="banner">
+    <h1>{{ page.title }}</h1>
+</div>
 
 <section>
     <h3>Arduino USB Connection</h3>
