--- a/projects/general-electronics/project-001-dc-to-dc-automatic-boost-buck-converter-5-32v-to-1.25-20v-5a-setup.html
+++ b/projects/general-electronics/project-001-dc-to-dc-automatic-boost-buck-converter-5-32v-to-1.25-20v-5a-setup.html
@@ -3,7 +3,9 @@ layout: default
 title: DC to DC Automatic Boost Buck Converter 5 - 32V to 1.25 - 20V 5A Setupw
 ---
 
-<h1>{{ page.title }}</h1>
+<div class="banner">
+    <h1>{{ page.title }}</h1>
+</div>
 
 <section>
     <h3>Introduction</h3>
