--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ call-to-action: Electronics Tutorials, Projects, and Reviews
 blurb: Electorials is a free website for the electronics community hobbyist.
 ---
 
-<header class="hero" style="background-image: url(/assets/img/banners/home-hero.jpg)">
+<header class="hero" style="--hero-image: url(/assets/img/banners/home-hero.jpg)">
     <div class="hero-text">
         <h1>Electorials</h1>
         <h2>{{ page.call-to-action }}</h2>
