Beginning stages of colour redesign!
Background colours for homepage sections gone; now pure white, with orange borders from the new logo.

Nav links in the navbar and the footer have that same orange for the :hover and :focus pseudoclasses: 75% opacity, and solid .125rem border respectively.

Will need to find out whether `border`, `outline`, or another method will allow partial, centred borders, ideally in equal thicknesses.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Consider putting a small sticky banner detailing the summer sale, or any similar
 -->
 
 <!-- Quote; light yellow -->
-<section class="quote" style="background-color: #fcfbcc;">
+<section class="quote">
     <h2>Our Quote</h2>
 
     <blockquote>
@@ -36,7 +36,7 @@ Consider putting a small sticky banner detailing the summer sale, or any similar
 </section>
 
 <!-- Introduction; light blue -->
-<section class="introduction" style="background-color: #d7fcff;">
+<section class="introduction">
 <!-- Might be best to put this in a separate about.html page. -->
     <h2>An introduction to our website</h2>
 
@@ -46,7 +46,7 @@ Consider putting a small sticky banner detailing the summer sale, or any similar
 </section>
 
 <!-- Shoutouts; light purple -->
-<section class="shoutouts" style="background-color: #ddd4ef;">
+<section class="shoutouts">
     <h2>Website Shoutouts</h2>
 
     <p>Go check out Seeed Studio Fusion's website below! They supply PCBs, SMT stencils, and much more with all of their convenient services like their PCB assemblies and manufacturing service. Also, their support team is very quick with email or on their social media networks, and Seeed Studio provides excellent DHL shipping for all of their products. Check out their main, PCB assembly, and PCB prototyping website with the links below:</p>
@@ -65,7 +65,7 @@ Consider putting a small sticky banner detailing the summer sale, or any similar
 </section>
 
 <!-- Projects Guide; pink -->
-<section class="projects-guide" style="background-color: #ffd9f4;">
+<section class="projects-guide">
     <h2>A Guide to our Projects</h2>
 
     <p>Our Arduino projects offer a wide variety of content for the whole community. There are projects for beginners to advanced makers. In each project, we include pictures of the real circuit working and the components. We set up our projects in this style:</p>
@@ -86,7 +86,7 @@ Consider putting a small sticky banner detailing the summer sale, or any similar
 </section>
 
 <!-- Reviews Guide; muted green -->
-<section class="reviews-guide" style="background-color: #dffadf;">
+<section class="reviews-guide">
     <h2>A Guide to our Reviews</h2>
 
     <p>The product reviews we have on our website consists of important elements to educate somebody about the module/sensor itself. The media we put on each review include:</p>
@@ -107,7 +107,7 @@ Consider putting a small sticky banner detailing the summer sale, or any similar
 </section>
 
 <!-- Company reviews; red -->
-<section class="company-reviews" style="background-color: #e46161;">
+<section class="company-reviews">
     <h2>Company Reviews</h2>
 
     <h4>JLCPCB</h4>
