--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@ Consider putting a small sticky banner detailing the summer sale, or any similar
     <p>— The Electorials Team</p>
 </section>
 
+<div class="section-border"></div>
+
 <!-- Introduction; light blue -->
 <section class="introduction">
 <!-- Might be best to put this in a separate about.html page. -->
@@ -44,6 +46,8 @@ Consider putting a small sticky banner detailing the summer sale, or any similar
     Our site is a non-profit making organisation which relies on free web hosting and components are sponsored from time to time for our unbiased review. Feel free to share our projects, tutorials and reviews. We welcome any free sponsors, comments and suggestions in order for us to improve the site content.<br>
     Contact us by filling up the contact form. We will endeavour to reply back as soon as possible as we hope to make the best Arduino community site it can be.</p>
 </section>
+
+<div class="section-border"></div>
 
 <!-- Shoutouts; light purple -->
 <section class="shoutouts">
@@ -63,6 +67,8 @@ Consider putting a small sticky banner detailing the summer sale, or any similar
 
     <p>Furthermore down this website shoutout list, I would like to mention Bittele Electronics, a company specialising in everything PCB. Their services include PCB fabrications, assemblies, or even IC (integrated circuit) programming. Bittele's support team is phenomenal in their responses and their website can cater for all of your questions you may have on hand. You can check out their PCB Assembly Services webpage with information regarding quotes, their supported Circuit Card Assembly Capabilities, and much more. Conclusively, I would recommend this company to all you fellow makers!</p>
 </section>
+
+<div class="section-border"></div>
 
 <!-- Projects Guide; pink -->
 <section class="projects-guide">
@@ -85,6 +91,8 @@ Consider putting a small sticky banner detailing the summer sale, or any similar
     </ul>
 </section>
 
+<div class="section-border"></div>
+
 <!-- Reviews Guide; muted green -->
 <section class="reviews-guide">
     <h2>A Guide to our Reviews</h2>
@@ -105,6 +113,8 @@ Consider putting a small sticky banner detailing the summer sale, or any similar
     </ul>
 
 </section>
+
+<div class="section-border"></div>
 
 <!-- Company reviews; red -->
 <section class="company-reviews">
