Added contact form.
Form submissions goes through Formspark.
Fields included:
- First name (required)
- Last name
- Email (required)
- Subject
- Message (required)

Will get to styling later on.

--- a/contact.html
+++ b/contact.html
@@ -3,4 +3,29 @@ layout: default
 title: Contact us
 ---
 
-<h1>{{ page.title }}</h1>
+<h1>Contact us via our contact form</h1>
+
+<p>We appreciate your feedback (suggestions, questions, queries, etc.) to help us improve our site.</p>
+
+<form action="https://submit-form.com/4273PeX7_-0fXduPWu4Or" target="_self">
+    <p><span style="color: red">*</span> <i>Indicates required field</i></p>
+
+   <label>Name <span style="color: red">*</span>
+       <input type="text" name="first-name" placeholder="First name" required>
+       <input type="text" name="last-name" placeholder="Last name">
+   </label>
+
+   <label>Email <span style="color: red">*</span>
+       <input type="email" name="email" placeholder="Email" required>
+   </label>
+
+   <label>Subject
+       <input type="text" name="Subject" placeholder="Subject">
+   </label>
+
+   <label>Comment <span style="color: red">*</span>
+       <textarea name="message" placeholder="Message" style="height: 200px; width: 370px;" required></textarea>
+   </label>
+
+   <button type="submit">Submit</button>
+</form>
