Removed colour names in comments
No longer needed since we're going with an all-white background instead of multi-coloured backgrounds for the different sections.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Consider putting a small sticky banner detailing the summer sale, or any similar
 --- button markup for "More Information", or markup in banner. ---
 -->
 
-<!-- Quote; light yellow -->
+<!-- Quote -->
 <section class="quote">
     <h2>Our Quote</h2>
 
@@ -37,7 +37,7 @@ Consider putting a small sticky banner detailing the summer sale, or any similar
 
 <div class="section-border"></div>
 
-<!-- Introduction; light blue -->
+<!-- Introduction -->
 <section class="introduction">
 <!-- Might be best to put this in a separate about.html page. -->
     <h2>An introduction to our website</h2>
@@ -49,7 +49,7 @@ Consider putting a small sticky banner detailing the summer sale, or any similar
 
 <div class="section-border"></div>
 
-<!-- Shoutouts; light purple -->
+<!-- Shoutouts -->
 <section class="shoutouts">
     <h2>Website Shoutouts</h2>
 
@@ -70,7 +70,7 @@ Consider putting a small sticky banner detailing the summer sale, or any similar
 
 <div class="section-border"></div>
 
-<!-- Projects Guide; pink -->
+<!-- Projects Guide -->
 <section class="projects-guide">
     <h2>A Guide to our Projects</h2>
 
@@ -93,7 +93,7 @@ Consider putting a small sticky banner detailing the summer sale, or any similar
 
 <div class="section-border"></div>
 
-<!-- Reviews Guide; muted green -->
+<!-- Reviews Guide -->
 <section class="reviews-guide">
     <h2>A Guide to our Reviews</h2>
 
@@ -116,7 +116,7 @@ Consider putting a small sticky banner detailing the summer sale, or any similar
 
 <div class="section-border"></div>
 
-<!-- Company reviews; red -->
+<!-- Company reviews -->
 <section class="company-reviews">
     <h2>Company Reviews</h2>
 
