Dumping local edits I haven't pushed to master branch
Reason for this branch:
In case things get too hairy where I live and I can't be there to help much more. You'll need these to continue from where I leave off.
Aside from feeling like I should have done this long ago in retrospect so you could see what I'm doing, I now feel worse about what's going on in my country and what could happen.

===

Now for what happening in this commit:
- _layouts/
---- {company,gen-elec,product,ras-pi}.html are possible layout pages for those "hub" pages in /projects and /reviews. They may or may not be used depending on how arranging the button links goes.

---- contact.html is most likely going to be used for /contact.html. Because this page will be the only page that has a form, I thought to put in form styling in a separate <style> tag instead of both in the styles.css file *and* in a separate .css file (best to minimise the amount of requests overall for files to fetch and parse).
      The positioning of that second <style> tag should be there to avoid any potential headaches with CSS specificity if it were placed anywhere else.

- contact.html with the layout changed to the contact.html layout. The <p> tags are meant to make styling the text for the labels easier and more proper (or "proper"; quite a few solutions around for form markup. Still not entirely sure how to implement it well since I haven't had much practice with them).

- styles.css given these to improve the presentation of the images in the projects and reviews pages. Might have to give images classes to the <img> or <picture> tags, or even make sure *all* images are within <picture> tags, to make styling the images much easier.

- project-002-....html just has the tab characters (from pressing the Tab key) missing. Output doesn't change at all, but git sees this as a change to look over.

===

I'll do my best to remember to push any changes I make locally onto this devel (short for 'development') branch. These c

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: contact
 title: Contact us
 ---
 
@@ -10,20 +10,20 @@ title: Contact us
 <form action="https://submit-form.com/4273PeX7_-0fXduPWu4Or" target="_self">
     <p><span style="color: red">*</span> <i>Indicates required field</i></p>
 
-   <label>Name <span style="color: red">*</span>
+   <label><p>Name <span style="color: red">*</span></p>
        <input type="text" name="first-name" placeholder="First name" required>
        <input type="text" name="last-name" placeholder="Last name">
    </label>
 
-   <label>Email <span style="color: red">*</span>
+   <label><p>Email <span style="color: red">*</span></p>
        <input type="email" name="email" placeholder="Email" required>
    </label>
 
-   <label>Subject
+   <label><p>Subject</p>
        <input type="text" name="Subject" placeholder="Subject">
    </label>
 
-   <label>Comment <span style="color: red">*</span>
+   <label><p>Comment <span style="color: red">*</span></p>
        <textarea name="message" placeholder="Message" style="height: 200px; width: 370px;" required></textarea>
    </label>
 
