Further styling on contact form
The form now looks prettier!

The field for the names align in a row on a large viewport, but wrap to 
their own lines on mobile. Thought it would be best since text would be 
too cramped if both fields stayed aligned in a row.
Putting the fields for the names in a div was pretty much the only way 
to easily do it.

<label>s have bottom spacing to give each section some room.

Button given a width so that it don't span the whole form width.

--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,10 @@ title: Contact us
     <p><span style="color: red">*</span> <i>Indicates required field</i></p>
 
    <label><p>Name <span style="color: red">*</span></p>
-       <input type="text" name="first-name" placeholder="First name" required>
-       <input type="text" name="last-name" placeholder="Last name">
+       <div class="names">
+           <input type="text" name="first-name" placeholder="First name" required>
+           <input type="text" name="last-name" placeholder="Last name">
+       </div>
    </label>
 
    <label><p>Email <span style="color: red">*</span></p>
@@ -24,7 +26,7 @@ title: Contact us
    </label>
 
    <label><p>Comment <span style="color: red">*</span></p>
-       <textarea name="message" placeholder="Message" style="height: 200px; width: 370px;" required></textarea>
+       <textarea name="message" placeholder="Message" style="height: 200px;" required></textarea>
    </label>
 
    <button type="submit">Submit</button>
