Banner implementation with styling
Written very similar to how the hero is written. Only without the <p> 
paragraph, and a shorter banner overall to help stylistically 
differentiate between hero and banners.

Banner images can effectively be mass-added right now!

--- a/projects/arduino/project-002-hc-sr04-ultrasonic-sensor.html
+++ b/projects/arduino/project-002-hc-sr04-ultrasonic-sensor.html
@@ -3,7 +3,12 @@ layout: default
 title: HC-SR04 Ultrasonic Sensor
 ---
 
-<h1>{{ page.title }}</h1>
+<header class="banner">
+    <div class="banner-image" style="--banner-image: url(/assets/img/banners/1113102774.jpg)"></div>
+    <div class="banner-text">
+        <h2>Arduino HC-SR04 Ultrasonic Sensor Project</h2>
+    </div>
+</header>
 
 <section>
     <h3>Before starting the project...</h3>
