--- a/projects/arduino/project-001-led.html
+++ b/projects/arduino/project-001-led.html
@@ -3,7 +3,12 @@ layout: default
 title: LEDs
 ---
 
-<h1>{{ page.title }}</h1>
+<header class="banner">
+    <div class="banner-image" style="--banner-image: url(/assets/img/banners/389040735.jpg)"></div>
+    <div class="banner-text">
+        <h2>Arduino LED Project</h2>
+    </div>
+</header>
 
 <section>
     <h3>Before starting the project...</h3>
