Banner for Arduino Setup page, and 1px blur for banner
Also trying out new directories in /assets/img/banners/ for better 
organisation of banners.

--- a/projects/arduino/arduino-setup.html
+++ b/projects/arduino/arduino-setup.html
@@ -3,9 +3,12 @@ layout: default
 title: Arduino Setup
 ---
 
-<div class="banner">
-    <h1>{{ page.title }}</h1>
-</div>
+<header class="banner">
+    <div class="banner-image" style="--banner-image: url(/assets/img/banners/arduino-projects/arduino-setup.png); filter: blur(1px)"></div>
+    <div class="banner-text">
+        <h2>Arduino Setup</h2>
+    </div>
+</header>
 
 <section>
     <h3>Arduino USB Connection</h3>
