Linking banner images to the HTML docs, and adding banner text
Updating and putting in the new banner images for the other pages, along 
with the text that goes on top of the image.

--- a/projects/arduino/project-003-lm35-temperature-sensor.html
+++ b/projects/arduino/project-003-lm35-temperature-sensor.html
@@ -3,7 +3,12 @@ layout: default
 title: LM35 Temperature Sensor
 ---
 
-<h1>{{ page.title }}</h1>
+<header class="banner">
+    <div class="banner-image" style="--banner-image: url(/assets/img/banners/arduino-projects/003_lm35.jpg)"></div>
+    <div class="banner-text">
+        <h2>Arduino LM35 Temperature Sensor Project</h2>
+    </div>
+</header>
 
 <section>
     <h3>Before starting the project...</h3>
