--- a/projects/arduino/project-006-infrared-proximity-sensor.html
+++ b/projects/arduino/project-006-infrared-proximity-sensor.html
@@ -3,7 +3,12 @@ layout: default
 title: Infrared Proximity Sensor
 ---
 
-<h1>{{ page.title }}</h1>
+<header class="banner">
+    <div class="banner-image" style="--banner-image: url(/assets/img/banners/arduino-projects/006_infrared-prox.jpg)"></div>
+    <div class="banner-text">
+        <h2>Arduino Infrared Proximity Sensor Project</h2>
+    </div>
+</header>
 
 <section>
     <h3>Before starting the project...</h3>
