--- a/projects/arduino/project-007-ky-008-laser-module.html
+++ b/projects/arduino/project-007-ky-008-laser-module.html
@@ -3,7 +3,12 @@ layout: default
 title: KY-008 Laser Module
 ---
 
-<h1>{{ page.title }}</h1>
+<header class="banner">
+    <div class="banner-image" style="--banner-image: url(/assets/img/banners/arduino-projects/007_ky-008.jpg)"></div>
+    <div class="banner-text">
+        <h2>Arduino KY-008 Laser Module Project</h2>
+    </div>
+</header>
 
 <section>
     <h3>Before starting the project...</h3>
