--- a/projects/arduino/project-008-seeeduino-v42-setup.html
+++ b/projects/arduino/project-008-seeeduino-v42-setup.html
@@ -3,7 +3,12 @@ layout: default
 title: Seeeduino v4.2 Setup
 ---
 
-<h1>{{ page.title }}</h1>
+<header class="banner">
+    <div class="banner-image" style="--banner-image: url(/assets/img/banners/arduino-projects/008_seeeduino-v42.jpg)"></div>
+    <div class="banner-text">
+        <h2>Arduino Seeeduino v4.2 Project</h2>
+    </div>
+</header>
 
 <section>
     <h3>Before starting the project...</h3>
