--- a/projects/arduino/project-009-temt6000-ambient-light-sensor.html
+++ b/projects/arduino/project-009-temt6000-ambient-light-sensor.html
@@ -3,7 +3,12 @@ layout: default
 title: TEMT6000 Ambient Light Sensor
 ---
 
-<h1>{{ page.title }}</h1>
+<header class="banner">
+    <div class="banner-image" style="--banner-image: url(/assets/img/banners/arduino-projects/009_temt6000.jpg)"></div>
+    <div class="banner-text">
+        <h2>Arduino TEMT6000 Ambient Light Sensor Project</h2>
+    </div>
+</header>
 
 <section>
     <h3>Before starting the project...</h3>
