--- a/projects/arduino/project-016-piezo-buzzer.html
+++ b/projects/arduino/project-016-piezo-buzzer.html
@@ -3,7 +3,12 @@ layout: default
 title: Piezo Buzzer (Christmas Special)
 ---
 
-<h1>{{ page.title }}</h1>
+<header class="banner">
+    <div class="banner-image" style="--banner-image: url(/assets/img/banners/arduino-projects/016_piezzo-buzzer.jpg)"></div>
+    <div class="banner-text">
+        <h2>Arduino Christmas Piezo Buzzer Project</h2>
+    </div>
+</header>
 
 <section>
     <h3>Before starting the project...</h3>
