--- a/projects/arduino/project-004-pir-motion-sensor.html
+++ b/projects/arduino/project-004-pir-motion-sensor.html
@@ -3,7 +3,12 @@ layout: default
 title: PIR Motion Sensor
 ---
 
-<h1>{{ page.title }}</h1>
+<header class="banner">
+    <div class="banner-image" style="--banner-image: url(/assets/img/banners/arduino-projects/004_pir.jpg)"></div>
+    <div class="banner-text">
+        <h2>Arduino PIR Motion Sensor Project</h2>
+    </div>
+</header>
 
 <section>
     <h3>Before starting the project...</h3>
