--- a/projects/arduino/project-005-dht-humidity-sensor.html
+++ b/projects/arduino/project-005-dht-humidity-sensor.html
@@ -3,7 +3,12 @@ layout: default
 title: DHT Humidity Sensor
 ---
 
-<h1>{{ page.title }}</h1>
+<header class="banner">
+    <div class="banner-image" style="--banner-image: url(/assets/img/banners/arduino-projects/005_dht.jpg)"></div>
+    <div class="banner-text">
+        <h2>Arduino "DHT" Humidity Sensor Project</h2>
+    </div>
+</header>
 
 <section>
     <h3>Before starting the project...</h3>
