--- a/projects/arduino/project-010-grove-dust-sensor-ppd42ns.html
+++ b/projects/arduino/project-010-grove-dust-sensor-ppd42ns.html
@@ -3,7 +3,12 @@ layout: default
 title: Grove - Dust Sensor (PPD42NS)
 ---
 
-<h1>{{ page.title }}</h1>
+<header class="banner">
+    <div class="banner-image" style="--banner-image: url(/assets/img/banners/arduino-projects/010_ppd42ns.jpg)"></div>
+    <div class="banner-text">
+        <h2>Arduino Grove-Dust Sensor (PPD42NS) Project</h2>
+    </div>
+</header>
 
 <section>
     <h3>Before starting the project...</h3>
