--- a/projects/arduino/project-011-13-i2c-white-oled-display.html
+++ b/projects/arduino/project-011-13-i2c-white-oled-display.html
@@ -3,7 +3,12 @@ layout: default
 title: 1.3" I2C White OLED Display
 ---
 
-<h1>{{ page.title }}</h1>
+<header class="banner">
+    <div class="banner-image" style="--banner-image: url(/assets/img/banners/arduino-projects/011_i2c-wht-oled.jpg)"></div>
+    <div class="banner-text">
+        <h2>Arduino 1.3" i2c White OLED Display Project</h2>
+    </div>
+</header>
 
 <section>
     <h3>Before starting the project...</h3>
