--- a/projects/arduino/project-013-maker-uno-setup.html
+++ b/projects/arduino/project-013-maker-uno-setup.html
@@ -3,7 +3,12 @@ layout: default
 title: Maker Uno Setup
 ---
 
-<h1>{{ page.title }}</h1>
+<header class="banner">
+    <div class="banner-image" style="--banner-image: url(/assets/img/banners/arduino-projects/013_maker-uno-setup.jpg)"></div>
+    <div class="banner-text">
+        <h2>Maker Uno Setup</h2>
+    </div>
+</header>
 
 <section>
     <h3>Before starting the project...</h3>
