--- a/projects/arduino/project-014-mlx90614-infrared-temperature-sensor.html
+++ b/projects/arduino/project-014-mlx90614-infrared-temperature-sensor.html
@@ -3,7 +3,12 @@ layout: default
 title: MLX90614 Infrared Temperature Sensor
 ---
 
-<h1>{{ page.title }}</h1>
+<header class="banner">
+    <div class="banner-image" style="--banner-image: url(/assets/img/banners/arduino-projects/014_mlx90614.jpg)"></div>
+    <div class="banner-text">
+        <h2>Arduino MLX90614 Infrared Temperature Sensor Project</h2>
+    </div>
+</header>
 
 <section>
     <h3>Before starting the project...</h3>
