--- a/projects/arduino/project-015-reyax-ryl896-lora-transceiver-module.html
+++ b/projects/arduino/project-015-reyax-ryl896-lora-transceiver-module.html
@@ -3,7 +3,12 @@ layout: default
 title: Reyax RYLR896 LoRa Transceiver Module
 ---
 
-<h1>{{ page.title }}</h1>
+<header class="banner">
+    <div class="banner-image" style="--banner-image: url(/assets/img/banners/arduino-projects/015_reyax-rylr896.jpg)"></div>
+    <div class="banner-text">
+        <h2>Arduino Reyax RYLR896 LoRa Transceiver Module Project</h2>
+    </div>
+</header>
 
 <section>
     <h3>Before starting the project...</h3>
