--- a/projects/arduino/project-017-bh1750-light-sensor.html
+++ b/projects/arduino/project-017-bh1750-light-sensor.html
@@ -3,7 +3,12 @@ layout: default
 title: BH1750 Light Sensor
 ---
 
-<h1>{{ page.title }}</h1>
+<header class="banner">
+    <div class="banner-image" style="--banner-image: url(/assets/img/banners/arduino-projects/017_bh1750.jpg)"></div>
+    <div class="banner-text">
+        <h2>Arduino BH1750 Light Sensor Project</h2>
+    </div>
+</header>
 
 <section>
     <h3>Before starting the project...</h3>
