--- a/projects/arduino/project-018-mbe280-environmental-sensor.html
+++ b/projects/arduino/project-018-mbe280-environmental-sensor.html
@@ -3,7 +3,12 @@ layout: default
 title: MBE280 Environmental Sensor
 ---
 
-<h1>{{ page.title }}</h1>
+<header class="banner">
+    <div class="banner-image" style="--banner-image: url(/assets/img/banners/arduino-projects/018_bme280.jpg)"></div>
+    <div class="banner-text">
+        <h2>Arduino BME280 Environmental Sensor Project</h2>
+    </div>
+</header>
 
 <section>
     <h3>Before starting the project...</h3>
