--- a/projects/arduino/project-019-tft-lcd-display-module-with-resistive-touch.html
+++ b/projects/arduino/project-019-tft-lcd-display-module-with-resistive-touch.html
@@ -3,7 +3,12 @@ layout: default
 title: TFT LCD Display Module with Resistive Touch
 ---
 
-<h1>{{ page.title }}</h1>
+<header class="banner">
+    <div class="banner-image" style="--banner-image: url(/assets/img/banners/arduino-projects/019_tft-lcd-display.jpg)"></div>
+    <div class="banner-text">
+        <h2>Arduino TFT LCD Display Module with Resistive Touch Project</h2>
+    </div>
+</header>
 
 <section>
     <h3>Before starting the project...</h3>
