--- a/projects/arduino/project-020-13-240x240-ips-tft-display-module.html
+++ b/projects/arduino/project-020-13-240x240-ips-tft-display-module.html
@@ -3,7 +3,12 @@ layout: default
 title: 1.3" 240x240 IPS TFT Display Module
 ---
 
-<h1>{{ page.title }}</h1>
+<header class="banner">
+    <div class="banner-image" style="--banner-image: url(/assets/img/banners/arduino-projects/020_ips-tft-display.jpg)"></div>
+    <div class="banner-text">
+        <h2>Arduino 1.3" 240x240 IPS TFT Display Module Project</h2>
+    </div>
+</header>
 
 <section>
     <h3>Before starting the project...</h3>
