--- a/projects/arduino.html
+++ b/projects/arduino.html
@@ -3,6 +3,13 @@ layout: grid
 title: Arduino Projects
 ---
 
+<header class="banner">
+    <div class="banner-image" style="--banner-image: url(/assets/img/banners/arduino-projects/arduino-projects.jpg)"></div>
+    <div class="banner-text">
+        <h2>Arduino LED Projects</h2>
+    </div>
+</header>
+
 <h1>{{ page.title }}</h1>
 
 {% include grid-items/arduino.html %}
