--- a/projects/general-electronics.html
+++ b/projects/general-electronics.html
@@ -3,6 +3,13 @@ layout: grid
 title: General Electronics Projects
 ---
 
+<header class="banner">
+    <div class="banner-image" style="--banner-image: url(/assets/img/banners/gen-elec-projects/gen-elec-projects.jpg)"></div>
+    <div class="banner-text">
+        <h2>General Electronics Projects</h2>
+    </div>
+</header>
+
 <h1>{{ page.title }}</h1>
 
 {% include grid-items/gen-elec.html %}
