--- a/projects/raspberry-pi.html
+++ b/projects/raspberry-pi.html
@@ -3,6 +3,13 @@ layout: grid
 title: Raspberry Pi Projects
 ---
 
+<header class="banner">
+    <div class="banner-image" style="--banner-image: url(/assets/img/banners/ras-pi-projects/ras-pi-projects.jpg)"></div>
+    <div class="banner-text">
+        <h2>Raspberry Pi Projects</h2>
+    </div>
+</header>
+
 <h1>{{ page.title }}</h1>
 
 {% include grid-items/ras-pi.html %}
