--- a/reviews/product.html
+++ b/reviews/product.html
@@ -3,6 +3,13 @@ layout: grid
 title: Product Reviews
 ---
 
+<header class="banner">
+    <div class="banner-image" style="--banner-image: url(/assets/img/banners/product-reviews/product-reviews.jpg)"></div>
+    <div class="banner-text">
+        <h2>Product Reviews</h2>
+    </div>
+</header>
+
 <h1>{{ page.title }}</h1>
 
 {% include grid-items/product.html %}
