--- a/reviews/product.html
+++ b/reviews/product.html
@@ -1,5 +1,5 @@
 ---
-layout: grid
+layout: product
 title: Product Reviews
 ---
 
@@ -9,7 +9,5 @@ title: Product Reviews
         <h2>Product Reviews</h2>
     </div>
 </header>
-
-<h1>{{ page.title }}</h1>
 
 {% include grid-items/product.html %}
