--- a/projects/general-electronics.html
+++ b/projects/general-electronics.html
@@ -1,5 +1,5 @@
 ---
-layout: grid
+layout: gen-elec
 title: General Electronics Projects
 ---
 
@@ -9,7 +9,5 @@ title: General Electronics Projects
         <h2>General Electronics Projects</h2>
     </div>
 </header>
-
-<h1>{{ page.title }}</h1>
 
 {% include grid-items/gen-elec.html %}
