--- a/projects/raspberry-pi.html
+++ b/projects/raspberry-pi.html
@@ -1,5 +1,5 @@
 ---
-layout: grid
+layout: ras-pi
 title: Raspberry Pi Projects
 ---
 
@@ -9,7 +9,5 @@ title: Raspberry Pi Projects
         <h2>Raspberry Pi Projects</h2>
     </div>
 </header>
-
-<h1>{{ page.title }}</h1>
 
 {% include grid-items/ras-pi.html %}
