--- a/reviews/company.html
+++ b/reviews/company.html
@@ -1,8 +1,14 @@
 ---
-layout: grid
+layout: company
 title: Company Reviews
 ---
 
-<h1>{{ page.title }}</h1>
+<header class="banner">
+    <!-- <div class="banner-image" style="--banner-image: url(/assets/img/banners/product-reviews/product-reviews.jpg)"></div> -->
+    <div class="banner-image"></div>
+    <div class="banner-text">
+        <h2>Product Reviews</h2>
+    </div>
+</header>
 
 {% include grid-items/company.html %}
