Several changes were done to the home page: - The current hero image is now replaced with another image in order to bring out more contrast between the text and the background. - The blur filter of the current hero image has been deleted but may be added back after further tests. - The text shadow of the hero text has been removed and the title is now not all in uppercase. - The "Our Quote" title is now removed as the quote is being placed in the hero image frame. - The quote font itself is now changed from Georgia to PT Sans and just for testing purposes, I made a slight alteration to the font color of the quote (from #8d2424 to #841b00).

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ blurb: Electorials is a free website for the electronics community hobbyist.
 ---
 
 <header class="hero">
-    <div class="hero-image" style="--hero-image: url(/assets/img/banners/home-hero.jpg);"></div>
+    <div class="hero-image" style="--hero-image: url(/assets/img/banners/home-hero2.png);"></div>
     <div class="hero-text">
         <h2>{{ page.call-to-action }}</h2>
         <p>{{ page.blurb }}</p>
@@ -15,7 +15,6 @@ blurb: Electorials is a free website for the electronics community hobbyist.
 
 <!-- Quote -->
 <section class="quote">
-    <h2>Our Quote</h2>
 
     <blockquote>
         "Do it with passion, or not at all."
