- Removed the section border above the introduction section. - Removed the quote section and integrated the blockquote & text into the hero header. - Made some slight changes to the styling/position of the blockquote and quote text. - Made some small changes to the text in the introduction section.

--- a/index.html
+++ b/index.html
@@ -9,28 +9,18 @@ blurb: Electorials is a free website for the electronics community hobbyist.
     <div class="hero-image" style="--hero-image: url(/assets/img/banners/home-hero2.png);"></div>
     <div class="hero-text">
         <h2>{{ page.call-to-action }}</h2>
-        <p>{{ page.blurb }}</p>
+        <p class="subtitle">{{ page.blurb }}</p>
+        <blockquote>"Do it with passion, or not at all."</blockquote>
+        <p class="quote-text">— The Electorials Team</p>
     </div>
 </header>
-
-<!-- Quote -->
-<section class="quote">
-
-    <blockquote>
-        "Do it with passion, or not at all."
-    </blockquote>
-
-    <p>— The Electorials Team</p>
-</section>
-
-<div class="section-border"></div>
 
 <!-- Introduction -->
 <section class="introduction">
 <!-- Might be best to put this in a separate about.html page. -->
     <h2>An introduction to our website</h2>
 
-    <p>Electorials was established on the 2nd of March, 2017 as a hobby. Our goal was to provide an easy, convenient project site for the Arduino community to share. We aim to establish as a one-stop destination for any of your electronic tutorial needs over time.<br>
+    <p>Electorials was established on March 2nd, 2017. Our goal was to provide an easy, convenient project site for the Arduino community to share. We aim to establish as a one-stop destination for any of your electronic tutorial needs over time.<br>
     Our site is a non-profit making organisation which relies on free web hosting and components are sponsored from time to time for our unbiased review. Feel free to share our projects, tutorials and reviews. We welcome any free sponsors, comments and suggestions in order for us to improve the site content.<br>
     Contact us by filling up the contact form. We will endeavour to reply back as soon as possible as we hope to make the best Arduino community site it can be.</p>
 </section>
