- Removed the introduction section title. - Changed some of the introduction section text. - Decreased the size of the logo by increasing the padding (.125rem to .300rem).

--- a/index.html
+++ b/index.html
@@ -18,11 +18,9 @@ blurb: Electorials is a free website for the electronics community hobbyist.
 <!-- Introduction -->
 <section class="introduction">
 <!-- Might be best to put this in a separate about.html page. -->
-    <h2>An introduction to our website</h2>
-
-    <p>Electorials was established on March 2nd, 2017. Our goal was to provide an easy, convenient project site for the Arduino community to share. We aim to establish as a one-stop destination for any of your electronic tutorial needs over time.<br>
-    Our site is a non-profit making organisation which relies on free web hosting and components are sponsored from time to time for our unbiased review. Feel free to share our projects, tutorials and reviews. We welcome any free sponsors, comments and suggestions in order for us to improve the site content.<br>
-    Contact us by filling up the contact form. We will endeavour to reply back as soon as possible as we hope to make the best Arduino community site it can be.</p>
+    <p>Electorials was established on March 2nd, 2017. Our goal was to provide an easy, convenient website for the Arduino community to share. We aim to be a one-stop destination for any of your electronic needs.<br>
+    Our site is non-profit making, relying completely on free web hosting and components sponsored for unbiased reviews so feel free to share our projects, tutorials and reviews. We welcome any free sponsors, comments and suggestions in order for us to improve the site's content.<br>
+    You can contact us anytime and we will endeavour to reply back as soon as possible.</p>
 </section>
 
 <div class="section-border"></div>
