- Made changes to the Arduino Projects page title.

--- a/projects/arduino.html
+++ b/projects/arduino.html
@@ -6,7 +6,7 @@ title: Arduino Projects
 <header class="banner">
     <div class="banner-image" style="--banner-image: url(/assets/img/banners/arduino-projects/arduino-projects.jpg)"></div>
     <div class="banner-text">
-        <h2>Arduino LED Projects</h2>
+        <h2>Arduino Projects</h2>
     </div>
 </header>
 
