--- a/projects/arduino.html
+++ b/projects/arduino.html
@@ -4,7 +4,7 @@ title: Arduino Projects
 ---
 
 <header class="banner">
-    <div class="banner-image" style="--banner-image: url(/assets/img/banners/arduino-projects/arduino-projects2.jpg)"></div>
+    <div class="banner-image" style="--banner-image: url(/assets/img/banners/arduino-projects/arduino-projects2.png)"></div>
     <div class="banner-text">
         <h2>Arduino Projects</h2>
     </div>
