Updated the banner image for Raspberry Pi Projects, General Electronic Projects & Product Reviews.

--- a/projects/general-electronics.html
+++ b/projects/general-electronics.html
@@ -4,7 +4,7 @@ title: General Electronics Projects
 ---
 
 <header class="banner">
-    <div class="banner-image" style="--banner-image: url(/assets/img/banners/gen-elec-projects/gen-elec-projects.jpg)"></div>
+    <div class="banner-image" style="--banner-image: url(/assets/img/banners/gen-elec-projects/gen-elec-projects2.png)"></div>
     <div class="banner-text">
         <h2>General Electronics Projects</h2>
     </div>
