--- a/projects/raspberry-pi.html
+++ b/projects/raspberry-pi.html
@@ -4,7 +4,7 @@ title: Raspberry Pi Projects
 ---
 
 <header class="banner">
-    <div class="banner-image" style="--banner-image: url(/assets/img/banners/ras-pi-projects/ras-pi-projects.jpg)"></div>
+    <div class="banner-image" style="--banner-image: url(/assets/img/banners/ras-pi-projects/ras-pi-projects2.png)"></div>
     <div class="banner-text">
         <h2>Raspberry Pi Projects</h2>
     </div>
