- Changed the blur to 1px from 2px for all the banner images. - Adjusted the position of the Product Reviews banner image.

--- a/reviews/product.html
+++ b/reviews/product.html
@@ -4,7 +4,7 @@ title: Product Reviews
 ---
 
 <header class="banner">
-    <div class="banner-image" style="--banner-image: url(/assets/img/banners/product-reviews/product-reviews2.png)"></div>
+    <div class="product-reviews-banner-image" style="--banner-image: url(/assets/img/banners/product-reviews/product-reviews2.png)"></div>
     <div class="banner-text">
         <h2>Product Reviews</h2>
     </div>
