Altered the positioning of the banner image for General Electronic Projects as well as the title itself & navbar button text.

--- a/projects/general-electronics.html
+++ b/projects/general-electronics.html
@@ -1,12 +1,12 @@
 ---
 layout: gen-elec
-title: General Electronics Projects
+title: General Electronic Projects
 ---
 
 <header class="banner">
-    <div class="banner-image" style="--banner-image: url(/assets/img/banners/gen-elec-projects/gen-elec-projects2.png)"></div>
+    <div class="gen-elec-banner-image" style="--banner-image: url(/assets/img/banners/gen-elec-projects/gen-elec-projects2.png)"></div>
     <div class="banner-text">
-        <h2>General Electronics Projects</h2>
+        <h2>General Electronic Projects</h2>
     </div>
 </header>
 
