Fixed the Company Reviews page title.

--- a/reviews/company.html
+++ b/reviews/company.html
@@ -7,7 +7,7 @@ title: Company Reviews
     <!-- <div class="banner-image" style="--banner-image: url(/assets/img/banners/product-reviews/product-reviews.jpg)"></div> -->
     <div class="banner-image"></div>
     <div class="banner-text">
-        <h2>Product Reviews</h2>
+        <h2>Company Reviews</h2>
     </div>
 </header>
 
