--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ blurb: Electorials is a free website for the electronics community hobbyist.
 
     <p><a href="https://www.seeedstudio.com/fusion.html" target=”_blank” rel=”noopener noreferrer”>Seeed Studio Fusion</a> – Focus on <a href="https://www.seeedstudio.com/fusion_pcb.html" target=”_blank” rel=”noopener noreferrer”>PCB prototyping</a> and <a href="https://www.seeedstudio.com/prototype-pcb-assembly.html" target=”_blank” rel=”noopener noreferrer”>PCB assembly</a> for more than 10 years. Only $4.90 for 10-piece PCBs up to 10×10mm.</p>
 
-    <p>You can check out my review for their service <a href="">here</a>:</p>
+    <p>You can check out my review for their service here:</p>
 
     <ul class="links">
         <li><a href="">Seeed Studio PCB Prototype & Assembly Service Review</a></li>
