--- a/reviews/company.html
+++ b/reviews/company.html
@@ -4,8 +4,7 @@ title: Company Reviews
 ---
 
 <header class="banner">
-    <!-- <div class="banner-image" style="--banner-image: url(/assets/img/banners/product-reviews/product-reviews.jpg)"></div> -->
-    <div class="banner-image"></div>
+    <div class="banner-image" style="--banner-image: url(/assets/img/banners/company-reviews/company-reviews.jpg)"></div>
     <div class="banner-text">
         <h2>Company Reviews</h2>
     </div>
